external-crates/move/crates/move-compiler/tests/development/enums/matching/enum_no_tyargs_match.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/enum_no_tyargs_match.move:3:17
  │
3 │     public enum Threes has drop {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

